# agent-x

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  cli.py  main.py
backend/app/agents/: __init__.py  analysis.py  application.py  base.py  cover_letter.py  discovery.py  interview.py  learning.py  outreach.py  pipeline.py  resume.py  tracking.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  analytics.py  applications.py  auth.py  documents.py  jobs.py  outreach.py  profile.py
backend/app/core/: celery_app.py  config.py  logging.py  metrics.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/schemas/: schemas.py
backend/app/scrapers/: __init__.py  ashby.py  base.py  greenhouse.py  lever.py  remoteok.py  restricted.py  weworkremotely.py  ycombinator.py
backend/app/services/: documents.py  email.py  embeddings.py  greenhouse_apply.py  llm.py  notify.py  vector_store.py
backend/app/tasks/: analytics_tasks.py  application_tasks.py  discovery_tasks.py  learning_tasks.py  outreach_tasks.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_api_flows.py  test_apply.py  test_config.py  test_notify.py  test_outreach.py  test_pipeline.py  test_scoring.py  test_scrapers.py  test_scrapers_parse.py  test_security.py
deploy/: README_HF_SPACE.md  spaces-start.sh
docs/: API.md  ARCHITECTURE.md  (+5 more)
(+27 files in other folders)
